Add delete endpoints
